# rust-cli-rest-perf-tets

./: Cargo.toml  Dockerfile  Makefile  README.md
k8s/: gen-pod.yaml  run.sh
src/: main.rs
